tests/dataset/tpc-ds/compiler/pl/q46.error
run: exit status 2
[
  {
    "amt":0,
    "bought_city":"Portland",
    "c_first_name":"John",
    "c_last_name":"Doe",
    "ca_city":"Seattle",
    "profit":0,
    "ss_ticket_number":1
  }
]
ERROR: /tmp/q46.pl:64: user:main Unknown message: error('expect failed')
